Remove reference to CMS GC
CMS was removed with JDK 14 https://openjdk.java.net/jeps/363

(cherry picked from commit b5b1c4ecb17ddeb90708637542c181d6092412e1)